# WorkshopDados2025.2

./: Untitled1.ipynb  atividade_fabrica.brM3  atividade_gabriel.pbix  desktop.ini  documentacao_tratamento_dados.docx  fabrica_ia.docx  fabrica_workshop2025.2.sql  ng.txt  workshop0825.2.py
desafio_final/desafio_final/: app.py  dados_tratados.csv  pyproject.toml  tratamento.ipynb
desafio_final/desafio_final/modelagem/: Relatorio_VelozCar.docx  concessionária VelozCar.sql  projeto_final_modelagem.brM3
fabrica_ml/fabrica_ml1/: README.md  app.py  brasil.csv  modelo_campeoes.joblib  modelo_jogos.joblib  pyproject.toml  teste.ipynb
