[project]
name = "fabrica-ml1"
version = "0.1.0"
description = ""
authors = [
    {name = "ismarnetodev",email = "dsxzz41@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "fabrica_ml1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
